--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,7 @@
 
 .container-content {
   width: 1440px;
-  height: 891px;
+  height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -24,7 +24,9 @@
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  width: 831px;
+  height: 891px; }
   .main .main-header {
     display: -webkit-box;
     display: -webkit-flex;
@@ -51,7 +53,8 @@
       -webkit-box-align: center;
       -webkit-align-items: center;
           -ms-flex-align: center;
-              align-items: center; }
+              align-items: center;
+      margin-right: 20px; }
     .main .main-header .main-header-item {
       list-style-type: none;
       margin-left: 16px;
@@ -63,7 +66,7 @@
       display: -ms-flexbox;
       display: flex; }
     .main .main-header .main-link {
-      margin-left: 40px; }
+      margin-left: 80px; }
     .main .main-header .main-link a {
       font-size: 16px;
       line-height: 54px;
@@ -79,7 +82,7 @@ section {
   margin-left: 50px;
   margin-right: 24px;
   margin-top: 212.4px;
-  margin-bottom: 256px;
+  margin-bottom: 224px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -95,7 +98,8 @@ section {
     font-size: 38px;
     line-height: 121%;
     margin-right: 90px;
-    margin-bottom: 42px; }
+    margin-bottom: 42px;
+    color: #F9E7EF; }
   section a {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -144,7 +148,27 @@ section {
       text-decoration: none; }
 
 .movie {
-  width: 659px;
-  height: 100%;
+  width: 609px;
+  height: 891px;
   background: #7E6EE6;
   opacity: 0.5; }
+
+.container-bg {
+  position: absolute;
+  background: #151E29;
+  width: 1440px;
+  height: 891px;
+  z-index: -1; }
+
+.image-bg {
+  width: 831px;
+  height: 891px;
+  background: yellow; }
+  .image-bg ._02 {
+    position: relative;
+    top: 328px;
+    left: -413px; }
+  .image-bg ._03 {
+    position: relative;
+    left: 465px;
+    top: 0px; }
