--- a/src/scss/home/_main-home.scss
+++ b/src/scss/home/_main-home.scss
@@ -4,15 +4,17 @@
   padding: 0;
   font-family: 'Anonymous Pro', monospace;
 }
-.container-content{
+.container-content {
   width: 1440px;
-  height: 891px;
+  height: 100%;
   display: flex;
 }
 .main{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 831px;
+  height: 891px;
   .main-header{
     display: flex;
     justify-content: space-between;
@@ -25,6 +27,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin-right: 20px; //origin -none
     }
     .main-header-item{
       list-style-type:none;
@@ -36,7 +39,7 @@
       display: flex;
     }
     .main-link{
-      margin-left: 40px;
+      margin-left: 80px; //origin 40
     }
     .main-link a{
       font-size: 16px;
@@ -50,7 +53,7 @@ section{
   display: flex;
   @include margin;
   margin-top: 212.4px;
-  margin-bottom: 256px;
+  margin-bottom: 224px; //lift up, that fit in container(in original it's 256px)
   flex-direction: column;
   justify-content: start;
   h1{
@@ -60,6 +63,7 @@ section{
     line-height: 121%;
     margin-right: 90px;
     margin-bottom: 42px;
+    color: #F9E7EF;
   }
   a{
     padding-top: 24px;
@@ -106,8 +110,8 @@ section{
   }
 }
 .movie{
-  width: 659px;
-  height: 100%;
+  width: 609px;
+  height: 891px;
   background: #7E6EE6;
   opacity: 0.5;
 }
