--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,15 +1,25 @@
 * {
   margin: 0;
-  padding: 0;
-  font-family: 'Anonymous Pro', monospace; }
+  padding: 0; }
 
-.container-content {
-  width: 100%;
+html, body {
   height: 100%;
+  width: 100%; }
+
+.content {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  background-color: #151E29;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-top: 1px;
+  margin-top: -1px;
+  font-family: 'Anonymous Pro', monospace; }
 
 .main {
   display: -webkit-box;
@@ -26,7 +36,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 55%;
-  height: 891px; }
+  height: 100%; }
   .main .main-header {
     display: -webkit-box;
     display: -webkit-flex;
@@ -36,9 +46,10 @@
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    margin-top: 30px;
-    margin-left: 50px;
-    margin-right: 24px; }
+    margin-top: 3.4%;
+    margin-right: 24px;
+    margin-left: 5.1%;
+    margin-right: 2%; }
     .main .main-header .main-header-logo img {
       width: 169.63px; }
     .main .main-header .main-header-link {
@@ -54,19 +65,37 @@
       -webkit-align-items: center;
           -ms-flex-align: center;
               align-items: center;
-      margin-right: 20px; }
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      margin-left: 20%; }
     .main .main-header .main-header-item {
       list-style-type: none;
-      margin-left: 16px;
+      margin-right: 16px;
       width: 44px;
       height: 44px; }
+    .main .main-header .main-header-item:last-child {
+      margin-right: 0; }
     .main .main-header .main-social-link {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
-      display: flex; }
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1; }
     .main .main-header .main-link {
-      margin-left: 80px; }
+      -webkit-box-flex: 1;
+      -webkit-flex-grow: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      text-align: end; }
     .main .main-header .main-link a {
       font-size: 16px;
       line-height: 54px;
@@ -79,8 +108,8 @@ section {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 50px;
-  margin-right: 24px;
+  margin-left: 5.1%;
+  margin-right: 2%;
   margin-top: 212.4px;
   margin-bottom: 224px;
   -webkit-box-orient: vertical;
@@ -127,18 +156,30 @@ section {
     height: 34px; }
 
 .main-footer {
+  position: fixed;
+  bottom: 0;
   background: #7E6EE6;
-  padding: 35px 0; }
+  height: 70px;
+  width: 55%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
   .main-footer .main-footer-list {
+    width: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     list-style-type: none;
-    margin-left: 50px;
-    margin-right: 24px; }
+    margin-left: 5.1%;
+    margin-right: 2%; }
     .main-footer .main-footer-list .main-footer-item {
-      margin-right: 46px; }
+      margin-right: 4.7%; }
     .main-footer .main-footer-list a {
       font-weight: bold;
       font-size: 16px;
@@ -149,7 +190,7 @@ section {
 
 .movie {
   width: 45%;
-  height: 891px;
+  height: 100%;
   background: #7E6EE6;
   opacity: 0.5; }
 
