one times copy2

--- a/src/scss/home/_bg-home.scss
+++ b/src/scss/home/_bg-home.scss
@@ -1,23 +1,17 @@
-.container-bg{
-  position: absolute;
-  background: #151E29;
-  width: 1440px;
-  height: 891px;
+.bg{
+  position: fixed;
+  padding-top: 1px;
+  margin-top: -1px;
+  left:0;
+  top:0;
+  bottom:0;
+  right: 0;
+  background-color: #151E29;
   z-index: -1;
 }
 .image-bg{
-  width: 831px;
-  height: 891px;
-  background: yellow;
-  ._02{
-    position: relative;
-    top:328px;
-    left:-413px;
-  }
-  ._03{
-    position: relative;
-    left:465px;
-    top: 0px;
+  width: 55%;
+  height: 100%;
 
-  }
 }
+
